[gd_scene load_steps=9 format=3 uid="uid://db78w4tl40jdb"]

[ext_resource type="Script" uid="uid://bh3bvd3ie2mbr" path="res://src/stages/game/round_game/round_game.gd" id="1_awtu6"]
[ext_resource type="PackedScene" uid="uid://csk7v3jwntq18" path="res://src/stages/game/dyad_game/dyad_game.tscn" id="1_co0oy"]
[ext_resource type="PackedScene" uid="uid://dksabjnbstug0" path="res://src/stages/game/round_game/ui/divider_ui.tscn" id="3_d3d65"]
[ext_resource type="PackedScene" uid="uid://bbe7i8g4nyqp1" path="res://src/stages/game/round_game/round_results/round_results_screen.tscn" id="3_oia04"]

[sub_resource type="Animation" id="Animation_voywd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_hanqr"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5d1nd"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f6bpb"]
_data = {
&"RESET": SubResource("Animation_voywd"),
&"fade_in": SubResource("Animation_hanqr"),
&"fade_out": SubResource("Animation_5d1nd")
}

[node name="RoundGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_awtu6")
_dyad_scene = ExtResource("1_co0oy")
_divider_ui_scene = ExtResource("3_d3d65")

[node name="SecondsTimer" type="Timer" parent="."]
one_shot = true

[node name="Dividers" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TimerContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 96)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"TimerPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TimerContainer"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 2

[node name="RoundLabel" type="Label" parent="MarginContainer/VBoxContainer/TimerContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ScoreLabel"
theme_override_font_sizes/font_size = 32

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer/TimerContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ScoreLabel"
horizontal_alignment = 1

[node name="DyadContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="RoundResultsSreen" parent="." instance=ExtResource("3_oia04")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="FadeScreen" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f6bpb")
}

[connection signal="timeout" from="SecondsTimer" to="." method="_on_seconds_timer_timeout"]
